--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content-detail-right">
+            <div class="content-detail-right feeds-no-options">
                 <div class="feeds-wrapper">
                     <div class="feed-head">
                         <div class="feed-head-left">
