--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -69,7 +69,7 @@
             </div>
          </div>
          <div class="content-detail-right feeds-no-options">
-            <div class="feeds-wrapper">
+            <div class="feeds-wrapper left-side-bar-enabled">
                <div class="feed-head">
                   <div class="feed-head-left">
                      <div class="avatar avatar-xs">
