--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -21,9 +21,7 @@
                   </ul>
                </div>
                <div class="topbar-right">
-                  <ul class="topbar-list">
-                     <li><i class="fa fa-circle" ng-class="viewData.owner.onlinestatus ? 'success':'error'"></i> <span>{{ProductViewData.owner.onlinestatus? 'Online':'Offline'}}</span></li>
-                  </ul>
+                  <span class="close-icon secondary" ng-click="goback()"></span>
                </div>
             </div>
          </div>
@@ -111,6 +109,11 @@
                      </div>
                   </div>
                   <div class="messenger private-chat" scroll-to-bottom="chatData">
+
+                    <div class="no-chat" ng-if="chatData.length == 0">
+                        <h2>No Messages</h2>
+                    </div>
+
                      <div class="message-wrap" ng-repeat="message in chatData">
                         <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
                            <div class="other-img" ng-if="message.user_id != user.id">
