--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -83,6 +83,10 @@
 
                     <div class="messenger private-chat" scroll-to-bottom="chatData">
 
+                        <div class="no-chat" ng-if="chatData.length == 0">
+                            <h2>No Messages</h2>
+                        </div>
+
                         <div class="message-wrap" ng-repeat="message in chatData">
                             <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
                                 <div class="other-img" ng-if="message.user_id != user.id">
