--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -18,7 +18,7 @@
                      <span ng-bind-html="type | highlight: $select.search"></span>
                   </ui-select-choices>
                </ui-select>
-               <div class="custom-tooltip tooltip-right tooltip-center mt-15" ng-show="showCatError">
+               <div class="custom-tooltip tooltip-right tooltip-center" ng-show="showCatError">
                   <div class="custom-tooltip-inner">
                      Select Category
                   </div>
