modal feature done for project

--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -19,6 +19,8 @@
                      <li><i class="fa fa-user"></i> Following {{ProductViewData.owner.following}} </li>
                      <li><i class="fa fa-eye"></i> Deals {{ProductViewData.owner.noofdeals}} </li>
                   </ul>
+               </div>
+               <div class="topbar-right">
                   <span class="close-icon secondary" ng-click="goback()"></span>
                </div>
             </div>
