--- a/angular/tpl/blocks/modals/collaborateresponseModal.html
+++ b/angular/tpl/blocks/modals/collaborateresponseModal.html
@@ -26,7 +26,7 @@
          <div class="row">
             <div class="col-lg-4 col-md-4 br-1">
                <div class="modal-left">
-                <div class="notes">
+                <div class="notes" ng-if="!notificationprojectData.member.status">
                             <div class="custom-tooltip tooltip-right" ng-if="checkError">
                                 <div class="custom-tooltip-inner">
                                     You Need to agree TSA Protection rules!
@@ -39,7 +39,7 @@
 
                             </div>
                         </div>
-                  <div class="slider-wrapper mt-30">
+                  <div class="slider-wrapper" ng-class="{'mt-30':!notificationprojectData.member.status}">
                     <div class="custom-slider">
                         <slick data="popupcarouselItems" infinite="false" init-onload="false" settings="popupslick" class="slider-for">
                             <div class="width100 sliderframer" ng-repeat="(key,image) in popupcarouselItems">
